# claudecoach

./: .env.example  .gitignore  README.md  install.ps1  install.sh  pyproject.toml  requirements.txt  setup.sh  start.ps1  start.sh
agent/: cli.py  parser.py
server/: database.py  main.py
server/models/: analysis.py  session.py
server/routers/: analysis.py  sessions.py
server/services/: plan_service.py
web/: package-lock.json  package.json  tailwind.config.ts
web/src/app/: layout.tsx  page.tsx
web/src/app/sessions/: page.tsx
web/src/components/: LangToggle.tsx  PlanBadge.tsx  PlanROICard.tsx  PlanSelector.tsx  ProjectCostTable.tsx  StatCard.tsx  TokenUsageChart.tsx
web/src/lib/: api.ts  i18n.ts
