[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "claudecoach"
version = "0.1.0"
description = "Claude Code usage analytics and optimization tool"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "watchdog>=3.0.0",
]

[project.scripts]
claudecoach = "agent.cli:main"

[tool.setuptools.packages.find]
include = ["agent*", "server*"]
